[package]
resolver = "2"
name = "turbostate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple to use Finite State Machine"
readme = "readme.md"
repository = "https://github.com/LIMPIX31/turbostate/"
documentation = "https://docs.rs/turbostate/"
authors = ["Danil Karpenko <limpix31@gmail.com>"]
exclude = [".editorconfig", ".rustfmt.toml"]
categories = ["rust-patterns", "data-structures"]
keywords = [
	"fsm",
	"state",
	"state-machine",
]

[dependencies]
tokio = { version = "1.36", features = ["sync"], optional = true }
async-recursion = { version = "1.0", optional = true }

[features]
async = ["tokio", "async-recursion"]
from_residual = []
